# pipeline_poc

./: req.txt
core/: README.rst  diff.txt  log.txt  makeTestCases.sh  pylint.conf  score.py  setup.cfg  stcov_statistics.py  tests_lib.py  upload_stcov.py  utcov_statistics.py
core/dockerfiles/: Dockerfile.py3  pip.conf
core/dockerfiles/dtaf_core_ut/: dockerfile  pip.conf  requirements_ut_py37.txt
core/docs/: BMC_create_debuguser_BKM.txt  Banino_bkm.docx  E2E_Provisioning_BKM.docx  Flashing provider configuration BKM.docx  README.txt  piv_external_architecture_guide.docx  system_configuration.xml
core/docs/source/: conf.py  dtaf_core.collateral.rsc2.rst  dtaf_core.collateral.rst  dtaf_core.drivers.internal.rst  dtaf_core.drivers.internal.tests.rst  dtaf_core.drivers.internal.wrapper.rst  dtaf_core.drivers.rst  dtaf_core.lib.private.cl_utils.adapter.helper.rst  dtaf_core.lib.private.cl_utils.adapter.private.pyte_interface.pyte.rst  dtaf_core.lib.private.cl_utils.adapter.private.pyte_interface.rst  dtaf_core.lib.private.cl_utils.adapter.private.rst  dtaf_core.lib.private.cl_utils.adapter.rst  dtaf_core.lib.private.cl_utils.communication.local.rst  dtaf_core.lib.private.cl_utils.communication.private.rst  dtaf_core.lib.private.cl_utils.communication.rst  dtaf_core.lib.private.cl_utils.rst  dtaf_core.lib.private.driver_config.rst  dtaf_core.lib.private.globals.rst  dtaf_core.lib.private.provider_config.rst  dtaf_core.lib.private.provision.environment.provision_wrapper.rst  dtaf_core.lib.private.provision.environment.rst  dtaf_core.lib.private.provision.rst  dtaf_core.lib.private.rst  dtaf_core.lib.rst  dtaf_core.lib.tcf.rst  dtaf_core.providers.internal.rst  dtaf_core.providers.rst  index.rst  (+2 more)
core/pipeline/: Jenkinsfile  Jenkinsfilesphinx
core/requirements/: requirements_st_py27.txt  requirements_st_py37.txt  requirements_ut_py27.txt  requirements_ut_py37.txt
core/scripts/: readme
core/src/: __init__.py
core/tests/: testcase_sample.py  testcase_template.py
core/ut/: py3_ut.xml
(+681 files in other folders)
