[tool:pytest]
norecursedirs = .git docs requirements
addopts = -v
#python_files = 
python_paths = src src/dtaf_core
markers=
    soundwave: test cases need to rely on soundwave
    rsc2: test cases need to rely on rsc2
    pdu: test cases need to rely on PDU + Banino
    banino: test cases need to rely on Banino
    com: test cases need to rely on com port
    sol: test cases need to rely on SOL
    em100: test cases that need the Dediprog EM100Pro flash emulator
    pi: test cases that need the raspberry pie
    em100: test cases that need the Dediprog EM100Pro flash emulator
    ssh: test cases that need a network connection to the SUT with ssh active.

[egg_info]
tag_build =
tag_date = 0

[aliases]
clean_egg_info = egg_info -Db ''
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

#[upload]
#repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[metadata]
name = dtaf-core
version = attr: dtaf_core.VERSION
description = Datacenter Test Automation Core Framework
long_description = file: README.md, CHANGELOG.md, LICENSE.md
license = BSD 3-Clause License

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find:
scripts =
install_requires =
  six~=1.12.0
  invoke~=1.3.0
  paramiko~=2.6.0
  fabric~=2.5.0
  pyserial~=3.4
#  importlib

tests_require =
  pytest~=5.2.2
  pytest-cov>2.7
  pytest-localserver>0.5.0
  pytest-sanic~=1.0.0
  pytest-html~=2.0.0
  pytest-metadata~=1.8.0
  pytest-mock~=1.12.1
  pytest-pythonpath~=0.7.3
  junit-xml~=1.8
  mock~=3.0.5
  responses~=0.9.0
  freezegun~=0.3.0
  nbsphinx>=0.3
  aioresponses~=0.6.0
  moto~=1.3.8

[options.package_data]
* = *.txt, *.rst, *.md ,*.docx, *.pdf, *.pyd, *.dll
dtaf_core = tests/unit/data/*.xml, tests/system/data/*.xml, tests/system/data/*.cfg

[options.packages.find]
where=src

